--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/home">Home</a>
+                            <a class="nav-link active" aria-current="page" href="/home">Home</a>                            
+                        </li>
+                        <li>
+                            <a class="nav-link" aria-current="page" href="/dashboard">Dashboard</a>
                         </li>
                      </ul>
 
